Convert scss to css, remove  and remove sass-rails gem. Bump rails to 6.1.3

--- a/app/assets/stylesheets/rocket_job_mission_control/application.css
+++ b/app/assets/stylesheets/rocket_job_mission_control/application.css
@@ -11,11 +11,10 @@
  * file per style scope.
  *
  *= require_self
+ *= require bootstrap.min
+ *= require fontawesome-all.min
+ *= require selectize
+ *= require selectize.bootstrap3
+ *= require datatables.min
  *= require_tree .
  */
-
-@import 'bootstrap.min';
-@import 'fontawesome-all.min';
-@import 'selectize';
-@import 'selectize.bootstrap3';
-@import 'datatables.min';
