Markup some Bootstrap panels for separation.

--- a/app/views/rocket_job_mission_control/dirmon_entries/edit.html.erb
+++ b/app/views/rocket_job_mission_control/dirmon_entries/edit.html.erb
@@ -1,5 +1,9 @@
 <div class='container-fluid'>
-  <div class='lead'>Edit Dirmon Entry</div>
+  <div class="row">
+    <div class="col-md-12">
+      <div class='lead'>Edit Dirmon Entry</div>
+    </div>
+  </div>
 
   <%= render partial: 'form', locals: { action: :update } %>
 </div>
