--- a/app/views/rocket_job_mission_control/dirmon_entries/index.html.erb
+++ b/app/views/rocket_job_mission_control/dirmon_entries/index.html.erb
@@ -1,28 +1,32 @@
 <div class='dirmon-list'>
   <div class='list'>
-    <div class='row'>
-      <div class='col-sm-10'>
-        <h2><%= @description %> Dirmon Entries</h2>
-      </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <div class="row">
+          <div class="col-sm-12">
+            <h2 class="pull-left"><%= @description %> Dirmon Entries</h2>
 
-      <div class='col-sm-2'>
-        <div class='btn btn-default pull-right dt-reload' data-behavior='reload'>
-          <i class='fas fa-sync'></i>
+            <div class='btn btn-warning pull-right dt-reload' data-behavior='reload'>
+              <i class='fas fa-sync'></i>
+            </div>
+          </div>
         </div>
       </div>
+        
+      <div class="panel-body">
+        <table class='table datatable dirmon-datatable' data-source='<%= @data_table_url %>' style='width: 100%'>
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Job Class</th>
+              <th>Pattern</th>
+            </tr>
+          </thead>
+
+          <tbody></tbody>
+        </table>
+      </div>
     </div>
-
-    <table class='table datatable dirmon-datatable' data-source='<%= @data_table_url %>' style='width: 100%'>
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Job Class</th>
-          <th>Pattern</th>
-        </tr>
-      </thead>
-
-      <tbody></tbody>
-    </table>
   </div>
 </div>
 
