--- a/app/views/rocket_job_mission_control/jobs/_dates.html.erb
+++ b/app/views/rocket_job_mission_control/jobs/_dates.html.erb
@@ -1,39 +1,35 @@
-<div class='lead'>Dates:</div>
-<div class='row'>
-  <div class='col-md-12'>
-    <table>
-      <tr>
-        <td><label>Created:</label></td>
-        <td><%= job_time(@job.created_at) %></td>
-      </tr>
-      <% if !@job.queued? %>
-        <tr>
-          <td><label><%= job_state_name(@job) %>:</label></td>
-          <td>
-            <%= job_state_time(@job) %>
-            <% unless @job.scheduled? %>
-              , <%= RocketJob.seconds_as_duration(Time.now - (@job.completed_at || @job.started_at || @job.created_at)) %> ago
-            <% end %>
-          </td>
-        </tr>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h4>Dates</h4>
+  </div>
+
+  <div class="panel-body">
+    <pre><code class="language-json5">
+created: "<%= job_time(@job.created_at) %>"
+    </code></pre>
+
+    <% if !@job.queued? %>
+      <pre><code class="language-json5">
+<%= job_state_name(@job) %>: "<%= job_state_time(@job) %>"
+      </code></pre>
+
+      <% unless @job.scheduled? %>
+        <pre><code class="language-json5">
+time_ago: "<%= RocketJob.seconds_as_duration(Time.now - (@job.completed_at || @job.started_at || @job.created_at)) %> ago"
+        </code></pre>
       <% end %>
-      <% if @job.scheduled? %>
-        <tr>
-          <td><label>Run At:</label></td>
-          <td><%= job_time(@job.run_at) %></td>
-        </tr>
-        <tr>
-          <td><label>Runs In:</label></td>
-          <td><%= RocketJob.seconds_as_duration(@job.run_at - Time.now) %></td>
-        </tr>
-      <% end %>
-      <% if @job.expires_at %>
-        <tr>
-          <td><label>Expires At:</label></td>
-          <td><%= job_time(@job.expires_at) %></td>
-        </tr>
-      <% end %>
-    </table>
+    <% end %>
+
+    <% if @job.scheduled? %>
+      <pre><code class="language-json5">
+Run At: "<%= job_time(@job.run_at) %>"
+Runs In: "<%= RocketJob.seconds_as_duration(@job.run_at - Time.now) %>"
+    <% end %>
+
+    <% if @job.expires_at %>
+      <pre><code class="language-json5">
+Expires At: "<%= job_time(@job.expires_at) %>"
+      </code></pre>
+    <% end %>
   </div>
 </div>
-<br/>
