--- a/app/views/rocket_job_mission_control/dirmon_entries/_output_category_fields.html.erb
+++ b/app/views/rocket_job_mission_control/dirmon_entries/_output_category_fields.html.erb
@@ -1,34 +1,39 @@
+<% dirmon_category = dirmon_entry_find_category(@dirmon_entry.properties["output_categories"], f.object.try(:name)) %>
+
 <div class="nested-fields">
-  <div class="panel panel-primary">
+  <div class="panel panel-success">
     <div class="panel-heading">
-      <h2><%= f.object.try(:name) %></h2>
+      <div class="row">
+        <div class="col-sm-12">
+          <h4 class="pull-left"><%= f.object.try(:name) %></h4>
+
+          <div class="pull-right">
+            <%= link_to "Remove", '#', class: "remove_fields btn btn-danger" %>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="panel-body">
       <%= f.hidden_field :_destroy %>
 
-      <div>
+      <div class="form-group">
         <%= f.label :columns %>
-        <% options = [] %>
-        <% value = "" %>
-        <%= f.select(:columns, options, { include_blank: true, selected: value }, { class: "selectize form-control" }) %>
-
+        <% options = dirmon_category ? Array(dirmon_category["columns"]) : [] %>
+        <%= f.select(:columns, options_for_select(options, options), { include_hidden: false }, { class: "selectize form-control", multiple: true }) %>
       </div>
-      
-      <div>
+
+      <div class="form-group">
         <%= f.label :format %>
-        <% options = [] %>
-        <% value = "" %>
+        <% options = extract_inclusion_values(RocketJob::Category::Output, :format, true) %>
+        <% value = dirmon_category["format"] if dirmon_category %>
         <%= f.select(:format, options, { include_blank: true, selected: value }, { class: "selectize form-control" }) %>
       </div>
-      
-      <div>
-        <%= f.label :format_options %>
-        <%= f.text_field :format_options %>
-      </div>
 
-      <div>
-        <%= link_to "Remove", '#', class: "remove_fields btn btn-danger" %>
+      <div class="form-group">
+        <%= f.label :format_options %>
+        <% value = dirmon_category["format_options"] if dirmon_category %>
+        <%= f.text_field(:format_options, value: value ? value.to_json : "", class: "form-control", placeholder: '{"key1":"value1", "key2":"value2", "key3":"value3"}') %>
       </div>
     </div>
   </div>
