--- a/app/views/rocket_job_mission_control/dirmon_entries/show.html.erb
+++ b/app/views/rocket_job_mission_control/dirmon_entries/show.html.erb
@@ -1,44 +1,47 @@
-<div class='col-md-12 job-status'>
-  <div id='job'>
-    <div class='lead'><%= @dirmon_entry.name %></div>
+<div id="job">
+  <div class="page-header">
+    <h3 class="pull-left"><%= @dirmon_entry.name %></h3>
 
-    <div class='job-state inline-block'>
-      <div class='left'>status</div>
-      <div class="<%= @dirmon_entry.state %> right"><%= @dirmon_entry.state %></div>
+    <div class="job-status inline-block pull-left">
+      <div class="job-state">
+        <div class="left">status</div>
+        <div class="<%= @dirmon_entry.state %> right"><%= @dirmon_entry.state %></div>
+      </div>
     </div>
 
-    <div class='btn-toolbar job-actions'>
-      <div class='btn-group'>
+    <div class="btn-toolbar job-actions pull-right">
+      <div class="btn-group">
         <% if (@dirmon_entry.disabled? || @dirmon_entry.pending?) && can?(:enable, @dirmon_entry) %>
-          <%= link_to 'Enable', enable_dirmon_entry_path(@dirmon_entry.id), method: :put, class: 'btn btn-default' %>
+          <%= link_to "Enable", enable_dirmon_entry_path(@dirmon_entry.id), method: :put, class: "btn btn-default" %>
         <% end %>
 
         <% if @dirmon_entry.enabled? && can?(:disable, @dirmon_entry)%>
-          <%= link_to 'Disable', disable_dirmon_entry_path(@dirmon_entry.id), method: :put, class: 'btn btn-default', data: { confirm: 'Are you sure?' } %>
+          <%= link_to "Disable", disable_dirmon_entry_path(@dirmon_entry.id), method: :put, class: "btn btn-default", data: { confirm: 'Are you sure?' } %>
         <% end %>
       </div>
 
-
-      <div class='btn-group'>
+      <div class="btn-group">
         <% if can?(:destroy, @dirmon_entry)%>
-        <%= link_to 'Destroy', dirmon_entry_path(@dirmon_entry), method: :delete, class: 'btn btn-default', data: { confirm: 'Are you sure?' } %>
+        <%= link_to "Destroy", dirmon_entry_path(@dirmon_entry), method: :delete, class: "btn btn-default", data: { confirm: "Are you sure?" } %>
         <% end %>
       </div>
+
       <%# It shows the Copy button in each Dirmon%>
-      <div class='btn-group'>
+      <div class="btn-group">
         <% if can?(:copy, @dirmon_entry)%>
-        <%= link_to 'Copy', copy_dirmon_entry_path(@dirmon_entry), class: 'btn btn-default' %>
+        <%= link_to "Copy", copy_dirmon_entry_path(@dirmon_entry), class: "btn btn-default" %>
         <% end %>
       </div>
-      <div class='btn-group'>
+
+      <div class="btn-group">
         <% if can?(:edit, @dirmon_entry)%>
-        <%= link_to 'Edit', edit_dirmon_entry_path(@dirmon_entry), class: 'btn btn-default' %>
+        <%= link_to "Edit", edit_dirmon_entry_path(@dirmon_entry), class: "btn btn-default" %>
         <% end %>
       </div>
     </div>
 
-    <div class='clearfix'></div>
-
-    <%= render partial: 'status', locals: {dirmon_entry: @job} %>
+    <div class="clearfix"></div>
   </div>
 </div>
+
+<%= render partial: "status", locals: { dirmon_entry: @job } %>
