--- a/app/views/rocket_job_mission_control/jobs/exception.html.erb
+++ b/app/views/rocket_job_mission_control/jobs/exception.html.erb
@@ -11,7 +11,7 @@
         <div class='clearfix'></div>
 
         <div class='message'>
-          <pre><code><%= @failure_exception.message %></code></pre>
+          <pre><code class="language-html"><%= @failure_exception.message %></code></pre>
         </div>
 
         <div class='error'>
